--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                         <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
                     </button>
-                    <a class="navbar-brand page-scroll" href="#page-top">ANOOP</a>
+                    <a class="navbar-brand page-scroll" href="#page-top">ANOOP DEVADIGA</a>
                 </div>
 
                 <!-- Collect the nav links, forms, and other content for toggling -->
@@ -487,7 +487,7 @@
                         <p><a href="mailto:anoopkundapur@gmail.com"><i class="fa fa-envelope-o fa-3x sr-contact"></i></a></p>
                     </div>
                     <div class="col-lg-3 text-center">
-                        <p><a href="https://github.com/adevadga" target="_blank"><i class="fa fa-github fa-3x sr-contact"></i></a></p>
+                        <p><a href="https://github.com/adevadiga" target="_blank"><i class="fa fa-github fa-3x sr-contact"></i></a></p>
                     </div>
                     <div class="col-lg-3 text-center">
                         <p><a href="https://plus.google.com/u/0/111811512688979927977" target="_blank"><i class="fa fa-google-plus-circle fa-3x sr-contact"></i></a></p>
